eclipse-workspace/Class1/src/objects/Item__c.object
<CustomObject>
    <description>represents the items table</description>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Delivery__c</fullName>
        <label>Free Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ItemID__c</fullName>
        <description>Unique identifier for each record</description>
        <displayFormat>A-{0000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>auto-increment number</inlineHelpText>
        <label>ItemID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Available__c</fullName>
        <label>Percent Available</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProductCost__c</fullName>
        <label>ProductCost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>Name of the product up to 30 characters</description>
        <inlineHelpText>max 30 characters</inlineHelpText>
        <label>ProductName</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_inches__c</fullName>
        <label>Size(inches)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Need Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>GE</fullName>
                </value>
                <value>
                    <fullName>Kenwood</fullName>
                </value>
                <value>
                    <fullName>Maytag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Months__c</fullName>
        <label>Warranty(Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <recordTypes>
        <fullName>Books</fullName>
        <active>true</active>
        <label>Books</label>
    </recordTypes>
    <recordTypes>
        <fullName>Electronics</fullName>
        <active>true</active>
        <label>Electronics</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Item_Code_Format</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX( Item_Code__c , &apos;[A-Z]{4}[0-9]{3}[A-Z]{2}&apos;))</errorConditionFormula>
        <errorMessage>Invalid Code Format</errorMessage>
    </validationRules>
</CustomObject>